db local c/s1